--- a/index.html
+++ b/index.html
@@ -3,9 +3,180 @@
 <head>
     <title>Fruta Madre</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="static/css/foundation.min.css">
 </head>
 <body>
 
+<div class="menu-centered">  <!--FALTA CERRAR ESTE DIV -->
+  <ul class="menu">
+    <li><a href="#">Conóceme</a></li>
+    <li><a href="#">Hijos De La Fruta</a></li>
+    <li><a href="#">Frutiblog</a></li>
+    <li><a href="#">Saboréalo</a></li>
+    <li><a href="#">Alianza</a></li>
+  </ul>
+
+
+<div class="row">
+    <h4>¿Porqué soy tan buenazo?</h4>
+    <div class="small-6 medium-4 columns">
+        <div class=" small-collapse medium-collapse">
+            <div class="small-6 columns">
+                <img src="static/img/apple.jpg" class="thumbnail" alt="" />
+            </div>
+            <div class="small-6 columns">
+                <h5>Harta fibra y nutritivo</h5>
+                <p>Lorem ipsum dolor sit amet consectetuer aliquet.</p>
+            </div>
+        </div>
+    </div>
+    <div class="small-6 medium-4 columns">
+        <div class=" small-collapse medium-collapse">
+            <div class="small-6 columns">
+                <img src="static/img/apple.jpg" class="thumbnail" alt="" />
+            </div>
+            <div class="small-6 columns">
+                <h5>Sellado al vacío y sin preservantes</h5>
+                <p>Lorem ipsum dolor sit amet consectetuer aliquet.</p>
+            </div>
+        </div>
+    </div>
+    <div class="small-6 medium-4 columns">
+        <div class=" small-collapse medium-collapse">
+            <div class="small-6 columns">
+                <img src="static/img/apple.jpg" class="thumbnail" alt="" />
+            </div>
+            <div class="small-6 columns">
+                <h5>Producto peruano sano y rico</h5>
+                <p>Lorem ipsum dolor sit amet consectetuer aliquet.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row small-up-2 medium-up-3 large-up-4">
+    <h4>¿Te provoca más?</h4>
+    <h5>Mírame el blog</h5>
+    <div class="column column-block">
+        <img src="static/img/orange.jpg" class="thumbnail" alt="">
+    </div>
+    <div class="column column-block">
+        <img src="static/img/orange.jpg" class="thumbnail" alt="">
+    </div>
+    <div class="column column-block">
+        <img src="static/img/orange.jpg" class="thumbnail" alt="">
+    </div>
+    <div class="column column-block">
+        <img src="static/img/orange.jpg" class="thumbnail" alt="">
+    </div>
+    <button type="button" class="success button">Aquí hay más</button>
+</div>
+
+<div class="row">
+
+</div>
+
+<div class="row">
+    <h4>¿Quieres probarla?</h4>
+    <p>Dejando tus datos podremos contactarnos contigo</p>
+</div>
+
+<hr>
+
+<footer class="row small-up-2 medium-up-3 large-up-4">
+    <div class="column column-block">
+        <h4>Fruta Madre</h4>
+        <ul style="list-style-type:none">
+            <li><a href="#">Conóceme</a></li>
+            <li><a href="#">Hijos De La Fruta</a></li>
+            <li><a href="#">Frutiblog</a></li>
+        </ul>
+    </div>
+
+    <div class="column column-block">
+        <h4>Frutas recientes</h4>
+        <div class=" medium-up-1 ">
+            <div class="column column-block">
+                <img class="small-6 columns" src="static/img/orange.jpg" class="thumbnail" alt="">
+                <div class="small-6 columns">
+                    <p>Dessert Cake</p>
+                    <a href="">Ver detalle</a>
+                </div>
+            </div>
+            <div class="column column-block">
+                <img class="small-6 columns" src="static/img/orange.jpg" class="thumbnail" alt="">
+                <div class="small-6 columns">
+                    <p>Apple Pie</p>
+                    <a href="">Ver detalle</a>
+                </div>
+            </div>
+            <div class="column column-block">
+                <img class="small-6 columns" src="static/img/orange.jpg" class="thumbnail" alt="">
+                <div class="small-6 columns">
+                    <p>Strawberry</p>
+                    <p>Cupcakes</p>
+                    <a href="">Ver detalle</a>
+                </div>
+            </div>
+            <div class="column column-block">
+                <img class="small-6 columns" src="static/img/orange.jpg" class="thumbnail" alt="">
+                <div class="small-6 columns">
+                    <p>Colorful Cake</p>
+                    <a href="">Ver detalle</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="column column-block">
+        <h4>Frutiblog</h4>
+        <div class=" medium-up-1 ">
+            <div class="column column-block">
+                <img class="small-6 columns" src="static/img/orange.jpg" class="thumbnail" alt="">
+                <div class="small-6 columns">
+                    <p>Dessert Cake</p>
+                    <a href="">Ver detalle</a>
+                </div>
+            </div>
+            <div class="column column-block">
+                <img class="small-6 columns" src="static/img/orange.jpg" class="thumbnail" alt="">
+                <div class="small-6 columns">
+                    <p>Apple Pie</p>
+                    <a href="">Ver detalle</a>
+                </div>
+            </div>
+            <div class="column column-block">
+                <img class="small-6 columns" src="static/img/orange.jpg" class="thumbnail" alt="">
+                <div class="small-6 columns">
+                    <p>Strawberry</p>
+                    <p>Cupcakes</p>
+                    <a href="">Ver detalle</a>
+                </div>
+            </div>
+            <div class="column column-block">
+                <img class="small-6 columns" src="static/img/orange.jpg" class="thumbnail" alt="">
+                <div class="small-6 columns">
+                    <p>Colorful Cake</p>
+                    <a href="">Ver detalle</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="column column-block">
+        <h4>Síguenos</h4>
+        <h4>Contáctanos</h4>
+        <h4>+51 989 744 234</h4>
+    </div>
+</footer>
+<div class="row">
+    <span class="small-3 column">SoftButterfly| Marketing digital</span>
+    <p class="small-3 column">Fruta Madre: Copyright @2017</p>
+</div>
+
+<script src="static/js/jquery.js" type="text/javascript"></script>
+<script src="static/js/foundation.min.js" type="text/javascript"></script>
+<script src="static/js/app.js" type="text/javascript"></script>
 </body>
 </html>
