--- a/index.html
+++ b/index.html
@@ -293,14 +293,27 @@
     <div class="row">
         <p class="titulo-section">¿Quieres probarla?</p>
         <p>Dejando tus datos podremos contactarnos contigo</p>
-        <hr>
-        <div class="medium-12 column">
-            <a class="button medium-6 column " href="#">Wow, Small Expand</a>
-            <a class="button medium-6 column" href="#">Wow, Small Expand</a>
+        <div class="bg-formulario">
+            <div class="">
+                <a class="button medium-6 column " href="#">Persona</a>
+                <a class="button medium-6 column bg-input" href="#">Empresa</a>
+            </div>
+            <div class="">
+                <div class="medium-6 column">
+                    <input class="bg-input" type="text" placeholder="¿cúal es su nombre?">
+                    <input class="bg-input" type="text" placeholder="¿Algún correo para escribirte?">
+                </div>
+                <div class="medium-6 column">
+                    <input class="bg-input" type="text" placeholder="¿Algún teléfono para llamarte?">
+                    <input class="bg-input" type="text" placeholder="¿Qué fruta te interesa?">
+                </div>
+                <button id="btn-green-form">Lo quiero por la Fruta Madre</button>
+            </div>
         </div>
     </div>
     <!-- FIN de Formulario -->
     <!-- Footer -->
+    <hr>
     <footer class="row small-up-2 medium-up-3 large-up-4">
         <div class="column column-block">
             <h4 class="txt-footer">Fruta Madre</h4>
