--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
 <div class="gray ">
     <!-- Formulario -->
     <div class="row">
-        <p class="titulo-section">¿Quieres probarla?</p>
-        <p>Dejando tus datos podremos contactarnos contigo</p>
+        <p class="titulo-section2">¿Quieres probarla?</p>
+        <p class="txt-center">Dejando tus datos podremos contactarnos contigo</p>
         <div class="bg-formulario">
             <div class="">
                 <a class="button medium-6 column " href="#">Persona</a>
@@ -313,8 +313,8 @@
     </div>
     <!-- FIN de Formulario -->
     <!-- Footer -->
-    <hr>
     <footer class="row small-up-2 medium-up-3 large-up-4">
+    <hr>
         <div class="column column-block">
             <h4 class="txt-footer">Fruta Madre</h4>
             <ul style="list-style-type:none">
@@ -329,8 +329,8 @@
                 <div class="column column-block">
                     <img class="small-6 columns brd-img" src="static/img/orange.jpg" class="" alt="">
                     <div class="small-6 columns">
-                        <p class="txt-red">Dessert Cake</p>
-                        <a class="txt-red" href="">Ver detalle</a>
+                        <p class="txt-red">Nombre de la fruta</p>
+
                     </div>
                 </div>
                 <div class="column column-block">
